@@ -810,6 +810,8 @@ a.help {
 
 /****** VN browse ********/
 
+.vnbrowse thead .tc_s { padding-left: 30px }
+.vnbrowse .tc_s { width: 65px }
 .vnbrowse .tc2 { text-align: right; padding: 0; }
 .vnbrowse .tc3 { padding: 0; }
 .vnbrowse .tc5 { text-align: right; padding-right: 10px; }
