@@ -6,6 +6,7 @@
 	- Copy-add release feature
 	- Automatically fill out title & original title when adding a release
 	- Separated VN search filters from search box
+	- Tag filers on VN search
 
 2.4 - 2009-06-07
 	- Release search + browser + filters
